--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
 <body>
+
+    <div >
+        <form method="get" action="/logout">
+            <input type="submit">
+        </form>
+    </div>
     <h3>Welcome to shiro-spring-boot-web-starter</h3>
 </body>
 </html>
